--- a/src/index.css
+++ b/src/index.css
@@ -64,8 +64,12 @@ main {
 }
 
 .meme--image {
-  max-width: 100%;
+  width: 400px; 
+  height: 400px; 
+  object-fit: cover; /* image scales properly while maintaining its aspect ratio */
+  margin: 0 auto; /* Centers the image */
   border-radius: 3px;
+  display: block; 
 }
 
 .meme--text {
